--- a/example1.html
+++ b/example1.html
@@ -10,10 +10,10 @@
 
 <body>
     <header>
-
+        <h1>title</h1>
     </header>
     <section>
-
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, distinctio est quo cupiditate, dolore expedita ducimus totam alias quisquam doloribus maxime vel. Deleniti necessitatibus harum dolor debitis esse cupiditate odio!</p>
     </section>
     <footer>
 
