--- a/example1.html
+++ b/example1.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>title</h1>
+        <h2>subtitulo</h2>
     </header>
     <section>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, distinctio est quo cupiditate, dolore expedita ducimus totam alias quisquam doloribus maxime vel. Deleniti necessitatibus harum dolor debitis esse cupiditate odio!</p>
